Fixed overflowing y-axis bug on about and education page.

--- a/public/about.css
+++ b/public/about.css
@@ -188,6 +188,7 @@ ul {
         transform: scale(0.7);
         transform-origin: top;
         margin-bottom: -1200px;
+        overflow: hidden;
     }
     h1 {
         font-size: 3vw;
@@ -247,7 +248,6 @@ ul {
         justify-items: center;  
         /*background-color: black;*/
         width: 70%;
-
     }
 
     /*For all boxes*/
