--- a/public/education.css
+++ b/public/education.css
@@ -183,6 +183,7 @@ p {
         transform: scale(0.8);
         transform-origin: top;
         margin-bottom: -150px;
+        overflow: hidden;
     }
     h1 {
         font-size: 3.6vw;
