--- a/public/styles.css
+++ b/public/styles.css
@@ -177,7 +177,7 @@ p {
     background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
     position: relative;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     height: 120px; /*Needed to adjust as needed to leave no gap on bottom*/
     font-weight: 385;
